test/parser/switch_error.dmz
// RUN: dmz %s -ast-dump 2>&1 | filecheck %s
fn main() -> void {
    let x = 10;
    // CHECK: [[# @LINE + 1 ]]:5: error: expected a else case
    switch(x) {
        case 1 => printf(&"1\n");
    }
    // CHECK: [[# @LINE + 4 ]]:9: error: only one else is permited
    switch(x) {
        case 1 => printf(&"1\n");
        else   => printf(&"else\n");
        else   => printf(&"else\n");
    }
    // CHECK: [[# @LINE + 1 ]]:12: error: expected expression
    switch() {
    }
    // CHECK: [[# @LINE + 1 ]]:12: error: expected '('
    switch {
    }
}